Fixed alignment in about us section

--- a/src/styles/components/blocks/image-text-block.css
+++ b/src/styles/components/blocks/image-text-block.css
@@ -1,6 +1,6 @@
 .image-text-block-container {
   .text-content {
-    @apply text-[18px] text-center;
+    @apply text-[18px] text-center flex-1;
     @apply lg:text-[20px] lg:text-left;
   }
   @apply flex flex-col justify-start items-center w-full gap-[20px] mb-[20px];
